# project-monitor

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: build-executables.yml  publish-npm.yml  publish.yml  test.yml
npm/: package.json  postinstall.js
src/project_monitor/: __init__.py  __main__.py  cli.py  git_ops.py  models.py  paths.py  scanner.py  store.py
src/project_monitor/formatters/: __init__.py  table.py  text.py
tests/: conftest.py  test_cli.py  test_formatters.py  test_git_ops.py  test_install_ps1.py  test_models.py  test_scanner.py  test_store.py
