[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-monitor"
version = "0.1.0"
description = "Scan a folder for git repos and view their status at a glance"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["git", "cli", "developer-tools", "productivity", "status"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/CompassPoint-Mentorship/project-monitor"
Issues = "https://github.com/CompassPoint-Mentorship/project-monitor/issues"

[project.scripts]
pmon = "project_monitor.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/project_monitor"]
